Salesforce Project/force-app/main/default/objects/Online_Order__c/Online_Order__c.object-meta.xml
<CustomObject>
    <label>Online Order</label>
    <nameField>
        <label>Online Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Online Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>