Salesforce Project/force-app/main/default/objects/Online_Order__c/fields/Approve_Large_Online_Order__c.field-meta.xml
<CustomField>
    <fullName>Approve_Large_Online_Order__c</fullName>
    <label>Approve Large Online Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>