Salesforce Project/force-app/main/default/objects/Online_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Online Orders</relationshipLabel>
    <relationshipName>Online_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>