Salesforce Project/force-app/main/default/objects/Online_Order__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Distributor__c</referenceTo>
    <relationshipLabel>Online Orders</relationshipLabel>
    <relationshipName>Online_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>