Salesforce Project/force-app/main/default/objects/Online_Order__c/fields/Online_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Online_Order_Number__c</fullName>
    <displayFormat>OO-{0000}</displayFormat>
    <label>Online Order Number</label>
    <type>AutoNumber</type>
</CustomField>