Salesforce Project/force-app/main/default/objects/Online_Order__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <displayFormat>ID-{0000000000}</displayFormat>
    <label>Order ID</label>
    <type>AutoNumber</type>
</CustomField>