Salesforce Project/force-app/main/default/objects/Online_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Online Orders</relationshipLabel>
    <relationshipName>Online_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>