Salesforce Project/force-app/main/default/objects/Online_Order__c/recordTypes/Customer_Order.recordType-meta.xml
<RecordType>
    <fullName>Customer_Order</fullName>
    <active>true</active>
    <description>Customer online orders</description>
    <label>Customer Order</label>
</RecordType>