Salesforce Project/force-app/main/default/objects/Online_Order__c/recordTypes/Distributor_Order.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Order</fullName>
    <active>true</active>
    <description>Wholesaler online orders</description>
    <label>Distributor Order</label>
</RecordType>